--- a/css/subpage04_1.css
+++ b/css/subpage04_1.css
@@ -46,9 +46,9 @@
 #category_wrap a{
     color: #ffffff;
 }
-/* #category_wrap a:hover{
+#category_wrap a:hover{
     color: #FF6F1E;
-} */
+}
 #category_wrap>li:nth-child(2){
     width: 3px;
     height: auto;
@@ -267,4 +267,5 @@
     #sec1_txt>p:last-child {
         font-size: 26px;
     }
+
 }
